--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <![endif]-->
   </head>
   <body>
-    <img src="flambo.jpg" style="display:block" />
-    <h1>Flambo</h1>
-    <h2>A Clojure DSL for Apache Spark</h2>
-
+    <div class="container">
+      <img src="flambo.jpg" style="display:block" />
+      <h1>Flambo</h1>
+      <h2>A Clojure DSL for Apache Spark</h2>
+    </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
