--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
   </head>
   <body>
     <div class="container">
-      <img src="flambo.jpg" style="display:block" />
-      <h1>Flambo</h1>
-      <h2>A Clojure DSL for Apache Spark</h2>
+      <div class="jumbotron">
+        <img src="flambo.jpg" style="display:block" />
+        <h1>Flambo</h1>
+        <h2>A Clojure DSL for Apache Spark</h2>
+      </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
