--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     <div class="container">
       <div class="jumbotron">
         <img src="flambo.jpg" style="display:block" />
-        <h1>Flambo</h1>
-        <h2>A Clojure DSL for Apache Spark</h2>
+        <div class="page-header">
+          <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
+        </div>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
