--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <img src="flambo.jpg" style="display:block" />
+        <div class="center-block">
+          <img src="flambo.jpg" style="display:block" />
+        </div>
         <div class="page-header">
           <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
         </div>
