--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   </head>
   <body>
     <div class="container">
+      <div class="center-block">
+        <img src="flambo.jpg"/>
+      </div>
       <div class="jumbotron">
-        <div class="center-block">
-          <img src="flambo.jpg" style="display:block" />
-        </div>
         <div class="page-header">
           <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
         </div>
