--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Flambo - A Clojure DSL for Apache Spark</title>
 
     <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -18,18 +18,14 @@
   </head>
   <body>
     <div class="container">
-      <div class="center-block">
-        <img src="flambo.jpg"/>
-      </div>
-      <div class="jumbotron">
-        <div class="page-header">
-          <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
-        </div>
+      <img class="center-block" src="flambo.jpg"/>
+      <div class="page-header">
+        <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
       </div>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   </body>
 </html>
