--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="http://fonts.googleapis.com/css?family=Syncopate" rel="stylesheet">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,14 +15,26 @@
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+      <![endif]-->
   </head>
   <body>
-    <div class="container">
-      <img class="center-block" src="flambo.jpg"/>
-      <div class="page-header">
-        <h1>Flambo <small>A Clojure DSL for Apache Spark</small></h1>
+    <div class="jumbotron">
+      <div class="container">
+        <div class="pull-left">
+          <img src="flambo-small.png"/>
+        </div>
+        <div>
+          <h1 style="font-family: 'Syncopate', sans-serif; font-size: 103px">Flambo</h1>
+          <ul class="nav nav-pills">
+            <li><a href="https://github.com/yieldbot/flambo">Github</a></li>
+            <li><a href="uberdoc.html">Literate source</a></li>
+            <li><a href="codox/index.html">API documentation</a></li>
+          </ul>
+        </div>
       </div>
+    </div>
+    <div class="container">
+      <p>Flambo is a Clojure DSL for Spark. It allows you to create and manipulate Spark data structures using idiomatic Clojure.</p>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
