--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
     <div class="container">
       <p>Flambo is a Clojure DSL for Spark. It allows you to create and manipulate Spark data structures using idiomatic Clojure.</p>
+      <p>The <a href="https://github.com/yieldbot/flambo/blob/develop/README.md">README</a> is the recommended place to get started.</p>
     </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
