--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <ul class="nav nav-pills">
             <li><a href="https://github.com/yieldbot/flambo">Github</a></li>
             <li><a href="uberdoc.html">Literate source</a></li>
-            <li><a href="codenia/index.html">API documentation</a></li>
+            <li><a href="codeina/index.html">API documentation</a></li>
           </ul>
         </div>
       </div>
